fix(docs): predict, student
